--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
-output {
-  display: inline-block;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  color: #333;
+  line-height: 1.5;
+  height: 100vh;
+  position: relative;
+  justify-content: center;
+  background: linear-gradient(to top left, #322c6e, #7dd56f);
+}
+
+h1 {
+  padding: auto;
+  align-items: flex-start;
+  position: relative;
+  justify-content: center;
 }
